# magnifier

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  magnifierConfig.cmake.in
.github/workflows/: ci.yml
cmake/: FindFilesystem.cmake
include/magnifier/: BitcodeExplorer.h  IFunctionResolver.h  ISubstitutionObserver.h  Result.h
lib/: BitcodeExplorer.cpp  IDCommentWriter.cpp  IDCommentWriter.h  ISubstitutionObserver.cpp  IdCommentWriter.cpp  IdCommentWriter.h
magnifier/: BitcodeExplorer.cpp  BitcodeExplorer.h  IDCommentWriter.cpp  IDCommentWriter.h  main.cpp
repl/: main.cpp
scripts/: build-preset.sh  fetch-cxx-common.sh
